--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -32,7 +32,6 @@
                 <!--/*@thymesVar id="id" type="spring.tacocloud.model.Ingredient"*/-->
                 <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
                 <!--/*@thymesVar id="name" type="spring.tacocloud.model.Ingredient"*/-->
-                <!--/*@thymesVar id="name" type="spring.tacocloud.model.Ingredient"*/-->
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
             <!-- end::designateWrap[] -->
@@ -40,7 +39,6 @@
 
         <div class="ingredient-group" id="proteins">
             <h3>Pick your protein:</h3>
-            <!--/*@thymesVar id="protein" type="spring.tacocloud.model.Ingredient.Type"*/-->
             <div th:each="ingredient : ${protein}">
                 <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
@@ -59,7 +57,6 @@
             <h3>Determine your veggies:</h3>
             <div th:each="ingredient : ${veggies}">
                 <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
-                <!--/*@thymesVar id="ingredient" type="spring.tacocloud.model.Ingredient"*/-->
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
         </div>
@@ -68,7 +65,6 @@
             <h3>Select your sauce:</h3>
             <div th:each="ingredient : ${sauce}">
                 <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
-                <!--/*@thymesVar id="name" type="spring.tacocloud.model.Ingredient"*/-->
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
         </div>
@@ -94,3 +90,4 @@
 <!-- end::closeFormTag[] -->
 </body>
 </html>
+<!-- end::all[] -->
